...
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Events"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!--
            Active events text
        -->
...
            android:textSize="10sp"
            android:textStyle="bold" />
        <!--
            filter button
        -->
        <ImageView
            android:id="@+id/filterimage"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/filter_events_title"
...
